BLUTH, CHANGES

#### 0.8.0 (2011-05-13) ###############################

* CHANGE: TimingBelt keys live for 36 hours.
* CHANGE: TimingBelt stamp includes day. e.g. 02m31d23:59
* CHANGE: TimingBelt.length defaults to 120 minutes (up from 60)


#### 0.7.2 (2011-04-10) ###############################

* FIXED: Bluth::TimingBelt.notch now caches notches by absolute time (not just HH:MM)
* CHANGE: Gracefully rescue Errno::ECONNREFUSED and try to reconnect
* ADDED: Bluth::Worker.reconnect!
* ADDED: Bluth::Worker.onerror


#### 0.7.1 (2011-03-06) ###############################

* FIXED: replace-worker command now always grabs the oldest worker
  and gracefully exits when there's no workers.
* CHANGE: Bluth::Gob objects have a ttl of 2 hours (up from 1)
* CHANGE: Bluth::Worker.interval is now 1 sec (down from 2)
* CHANGE: Default queuetimeout is now 30 seconds (down from 30)
* ADDED: Bluth::Worker processes now handle USR1 and USR2 signals
  for enabling/disabling debugging and increasing/decreasing
  Bluth.queuetimeout (respectively)


#### 0.7.0 (2011-03-04) ###############################

* ADDED: backtrace field to Bluth::Gob
* ADDED: Bluth::TimingBelt
* ADDED: Bluth::Queue.queues/entry_queues include TimingBelt queues 
  when Bluth::TimingBelt is defined.
* ADDED: replace-worker command


#### 0.6.8 (2011-02-07) ###############################

* FIXED: Remove use of calls to fineround in Worker
* CHANGE: Only call Familia.ld when in debug mode.


#### 0.6.7 (2011-01-08) ###############################

* FIXED: -f option now works for stop-workers and stop-scheduler commands
* ADDED: Bluth.onconnect (resolves non-default redis connection issues)


#### 0.6.6 (2011-01-02) ###############################

CHANGE: Bluth::Worker.onstart

#### 0.6.5 (2011-01-02) ###############################

* FIXED: The previous change required a different approach for the scheduler. 

#### 0.6.4 (2011-01-02) ###############################
