@@ -4,6 +4,7 @@ BLUTH, CHANGES
 
 * CHANGE: TimingBelt keys live for 36 hours.
 * CHANGE: TimingBelt stamp includes day. e.g. 02m31d23:59
+* CHANGE: TimingBelt stamp takes just Time.
 * CHANGE: TimingBelt.length defaults to 120 minutes (up from 60)
 
 
